# playground

./: .gitignore
credit-fastapi/: pyproject.toml  run_backend_app.py
credit-fastapi/.github/workflows/: ci-test.yml
credit-fastapi/api/: __init__.py  application.py  exception_handler.py  settings.py
credit-fastapi/api/credit/: controller.py  dto.py
credit-fastapi/api/dependencies/: db_session.py
credit-fastapi/api/mock_user/: controller.py  event_handler.py
credit-fastapi/business/credit/: credit_service.py  dto.py  service.py
credit-fastapi/business/mock_user/: user_service.py
credit-fastapi/core/db/: exception.py  postgres.py
credit-fastapi/domain/: event.py
credit-fastapi/domain/credit/entity/: credit.py
credit-fastapi/domain/mock_user/entity/: user.py
credit-fastapi/domain/mock_user/event/: user_event.py
credit-fastapi/infrastructure/datasource/postgres/: source.py
credit-fastapi/infrastructure/persistence/: __init__.py  base.py
credit-fastapi/infrastructure/persistence/alembic/: alembic.ini
credit-fastapi/infrastructure/persistence/alembic/migrations/: env.py  settings.py
credit-fastapi/infrastructure/persistence/alembic/migrations/versions/: b51e25c2a01c_01_init_credits.py
credit-fastapi/infrastructure/persistence/credit/adapter/: credit_persistence_adapter.py
credit-fastapi/infrastructure/persistence/credit/entity/: credit_entity.py
credit-fastapi/support/common/: base.py  base_domain.py  base_dto.py  exception.py  singleton.py
object-design-principle/: .gitignore  settings.gradle.kts
payment/: main.py  pyproject.toml  (+1 more)
(+81 files in other folders)
