[tool.poetry]
name = "python-linux"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.13.2"
uvicorn = "^0.32.0"
fastapi = "^0.115.4"
itsdangerous = "^2.2.0"
python-json-logger = "^2.0.7"
redis = "^5.2.0"
pydantic-settings = "^2.6.0"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
